update all files

--- a/a2_output.html
+++ b/a2_output.html
@@ -1,11 +1,392 @@
+ 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Output of my lovely algorithm</title>
-  </head>
-  <body>
-    Once I've written my program, this file will be automatically generated. <br/>
-    But for now it has been written by hand as a placeholder.
-  </body>
+	<head>
+		<meta charset="UTF-8"/>
+		<title>Fenerbahce Dogus Istanbul Euroleague Statistics</title>
+		<style>
+			table{
+				margin: 10px;
+				border-collapse: collapse;
+				border: 3px solid navy;
+				text-align: center;
+			}
+			td, th{
+				border: 2px solid navy;
+				padding: 2px;
+			}
+		</style>
+	</head>
+	<body>
+		<table>
+			<tr>
+				<th>No</th>
+				<th>Player</th>
+				<th>Country</th>
+				<th>Age</th>
+				<th>Height</th>
+				<th>Pos</th>
+				<th>Games</th>
+				<th>Minutes</th>
+				<th>Points</th>
+				<th>2FG</th>
+				<th>3FG</th>
+				<th>FT</th>
+				<th>Ribounds</th>
+				<th>Assists</th>
+				<th>Steals</th>
+				<th>Turnovers</th>
+				<th>Blocks</th>
+				<th>Fouls</th>
+				<th>PIR</th>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>Thomson, Jason</td>
+				<td>USA</td>
+				<td>31</td>
+				<td>2.11</td>
+				<td>C</td>
+				<td>10</td>
+				<td>16:56</td>
+				<td>4.5</td>
+				<td>47.5%</td>
+				<td>&empty;</td>
+				<td>70.0%</td>
+				<td>4.7</td>
+				<td>1</td>
+				<td>0.4</td>
+				<td>1.1</td>
+				<td>1</td>
+				<td>3.4</td>
+				<td>6.1</td>
+			</tr>
+			<tr>
+				<td>4</td>
+				<td>Melli, Nicolo</td>
+				<td>Italy</td>
+				<td>26</td>
+				<td>2.05</td>
+				<td>F</td>
+				<td>10</td>
+				<td>26:00</td>
+				<td>7.8</td>
+				<td>55.0%</td>
+				<td>38.9%</td>
+				<td>81.3%</td>
+				<td>4.9</td>
+				<td>1.5</td>
+				<td>0.5</td>
+				<td>1.1</td>
+				<td>0.6</td>
+				<td>2.5</td>
+				<td>10.2</td>
+			</tr>
+			<tr>
+				<td>5</td>
+				<td>Hersek, Baris</td>
+				<td>Turkey</td>
+				<td>29</td>
+				<td>2.08</td>
+				<td>F</td>
+				<td>0</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+			</tr>
+			<tr>
+				<td>10</td>
+				<td>Mahmutoglu, Melih</td>
+				<td>Turkey</td>
+				<td>27</td>
+				<td>1.91</td>
+				<td>G</td>
+				<td>7</td>
+				<td>04:39</td>
+				<td>0.3</td>
+				<td>25.0%</td>
+				<td>0.0%</td>
+				<td>&empty;</td>
+				<td>0.1</td>
+				<td>0.4</td>
+				<td>0.3</td>
+				<td>0</td>
+				<td>0</td>
+				<td>0.9</td>
+				<td>-1.3</td>
+			</tr>
+			<tr>
+				<td>11</td>
+				<td>Wanamaker, Brad</td>
+				<td>USA</td>
+				<td>28</td>
+				<td>1.93</td>
+				<td>G</td>
+				<td>10</td>
+				<td>32:02</td>
+				<td>12.8</td>
+				<td>41.7%</td>
+				<td>33.3%</td>
+				<td>75.0%</td>
+				<td>3.6</td>
+				<td>4.8</td>
+				<td>1.2</td>
+				<td>1.7</td>
+				<td>0.2</td>
+				<td>2.7</td>
+				<td>14.3</td>
+			</tr>
+			<tr>
+				<td>16</td>
+				<td>Sloukas, Kostas</td>
+				<td>Greece</td>
+				<td>27</td>
+				<td>1.9</td>
+				<td>G</td>
+				<td>9</td>
+				<td>29:18</td>
+				<td>11.7</td>
+				<td>51.0%</td>
+				<td>40.0%</td>
+				<td>100.0%</td>
+				<td>2.9</td>
+				<td>6.2</td>
+				<td>0.6</td>
+				<td>2.4</td>
+				<td>0.1</td>
+				<td>1.3</td>
+				<td>15.7</td>
+			</tr>
+			<tr>
+				<td>18</td>
+				<td>Arna, Egehan</td>
+				<td>Turkey</td>
+				<td>20</td>
+				<td>2.03</td>
+				<td>F</td>
+				<td>0</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+			</tr>
+			<tr>
+				<td>21</td>
+				<td>Nunnally, James</td>
+				<td>USA</td>
+				<td>27</td>
+				<td>2.01</td>
+				<td>F</td>
+				<td>10</td>
+				<td>23:00</td>
+				<td>11</td>
+				<td>62.1%</td>
+				<td>61.8%</td>
+				<td>84.6%</td>
+				<td>2.3</td>
+				<td>1.1</td>
+				<td>0.8</td>
+				<td>1</td>
+				<td>0.1</td>
+				<td>1.7</td>
+				<td>11</td>
+			</tr>
+			<tr>
+				<td>23</td>
+				<td>Guduric, Marko</td>
+				<td>Serbia</td>
+				<td>22</td>
+				<td>1.96</td>
+				<td>G</td>
+				<td>10</td>
+				<td>14:36</td>
+				<td>4.5</td>
+				<td>63.6%</td>
+				<td>29.4%</td>
+				<td>66.7%</td>
+				<td>1.1</td>
+				<td>1.6</td>
+				<td>0.8</td>
+				<td>1.6</td>
+				<td>0</td>
+				<td>1.7</td>
+				<td>3.8</td>
+			</tr>
+			<tr>
+				<td>24</td>
+				<td>Vesely, Jan</td>
+				<td>Czechia</td>
+				<td>27</td>
+				<td>2.13</td>
+				<td>C</td>
+				<td>10</td>
+				<td>29:45</td>
+				<td>13.8</td>
+				<td>65.1%</td>
+				<td>&empty;</td>
+				<td>70.3%</td>
+				<td>4.4</td>
+				<td>1.7</td>
+				<td>1</td>
+				<td>1.5</td>
+				<td>0.9</td>
+				<td>3.3</td>
+				<td>16.9</td>
+			</tr>
+			<tr>
+				<td>32</td>
+				<td>Guler, Sinan</td>
+				<td>Turkey</td>
+				<td>34</td>
+				<td>1.92</td>
+				<td>G</td>
+				<td>2</td>
+				<td>04:02</td>
+				<td>1.5</td>
+				<td>&empty;</td>
+				<td>100.0%</td>
+				<td>&empty;</td>
+				<td>0</td>
+				<td>0</td>
+				<td>0</td>
+				<td>0.5</td>
+				<td>0</td>
+				<td>1</td>
+				<td>&empty;</td>
+			</tr>
+			<tr>
+				<td>33</td>
+				<td>Kalinic, Nikola</td>
+				<td>Serbia</td>
+				<td>26</td>
+				<td>2.02</td>
+				<td>F</td>
+				<td>0</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+				<td>&empty;</td>
+			</tr>
+			<tr>
+				<td>35</td>
+				<td>Dixon, Bobby</td>
+				<td>Turkey</td>
+				<td>34</td>
+				<td>1.78</td>
+				<td>G</td>
+				<td>2</td>
+				<td>06:07</td>
+				<td>2.5</td>
+				<td>33.3%</td>
+				<td>50.0%</td>
+				<td>&empty;</td>
+				<td>1</td>
+				<td>0.5</td>
+				<td>0</td>
+				<td>0</td>
+				<td>0</td>
+				<td>0</td>
+				<td>2</td>
+			</tr>
+			<tr>
+				<td>44</td>
+				<td>Duverioglu, Ahmet</td>
+				<td>Turkey</td>
+				<td>24</td>
+				<td>2.09</td>
+				<td>C</td>
+				<td>6</td>
+				<td>08:34</td>
+				<td>2.3</td>
+				<td>70.0%</td>
+				<td>&empty;</td>
+				<td>0.0%</td>
+				<td>1</td>
+				<td>0.7</td>
+				<td>0.3</td>
+				<td>0.2</td>
+				<td>0.2</td>
+				<td>1.3</td>
+				<td>2.7</td>
+			</tr>
+			<tr>
+				<td>70</td>
+				<td>Datome, Luigi</td>
+				<td>Italy</td>
+				<td>30</td>
+				<td>2.03</td>
+				<td>F</td>
+				<td>10</td>
+				<td>28:20</td>
+				<td>12.6</td>
+				<td>58.7%</td>
+				<td>48.8%</td>
+				<td>92.3%</td>
+				<td>3.7</td>
+				<td>1.6</td>
+				<td>0.1</td>
+				<td>1.7</td>
+				<td>0.8</td>
+				<td>1.7</td>
+				<td>12.7</td>
+			</tr>
+			<tr>
+			<tr>
+				<td colspan='2' style='font-style:italic;'>Total Players: 15</td>
+				<td style='font-style:italic;'></td>
+				<td style='font-style:italic;'>27.5</td>
+				<td style='font-style:italic;'>2.00</td>
+				<td style='font-style:italic;'></td>
+				<td style='font-style:italic;'>10</td>
+				<td style='font-style:italic;'></td>
+				<td style='font-style:italic;'>85.3</td>
+				<td style='font-style:italic;'>52.1%</td>
+				<td style='font-style:italic;'>44.7%</td>
+				<td style='font-style:italic;'>71.1%</td>
+				<td style='font-style:italic;'>29.7</td>
+				<td style='font-style:italic;'>21.1</td>
+				<td style='font-style:italic;'>6</td>
+				<td style='font-style:italic;'>12.8</td>
+				<td style='font-style:italic;'>3.9</td>
+				<td style='font-style:italic;'>21.5</td>
+				<td style='font-style:italic;'>94.1</td>
+			</tr>
+
+		</table>
+		</br>
+		<ul>
+			<li>Number of players in 'Center' position is 3.</li>
+			<li>Number of players in 'Forward' position is 6.</li>
+			<li>Number of players in 'Guard' position is 6.</li>
+			<li>Number of players older 30 years old is 4.</li>
+			<li>Average age of team is 27.</li>
+			<li>
+		</ul>
+	</body>
 </html>
+
