last update all files

--- a/a2_output.html
+++ b/a2_output.html
@@ -3,8 +3,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Fenerbahce Dogus Istanbul Euroleague Statistics</title>
+		<title>Fenerbahce Dogus Istanbul</title>
 		<style>
+			body{
+				color: gold;
+				background-color: grey;
+			}
 			table{
 				margin: 10px;
 				border-collapse: collapse;
@@ -15,10 +19,24 @@
 				border: 2px solid navy;
 				padding: 2px;
 			}
+			th, caption{
+				color: black;
+			}
+			div{
+				border: 3px solid navy;
+				margin: 10px;
+			}
+			li{
+				margin: 2px;
+			}
+			tr:hover, div:hover{
+				background-color: blue;
+			}
 		</style>
 	</head>
 	<body>
 		<table>
+			<caption><strong>Fenerbahce Dogus Istanbul Turkish Airlines Euroleague Statistics</strong><caption>
 			<tr>
 				<th>No</th>
 				<th>Player</th>
@@ -51,13 +69,13 @@
 				<td>16:56</td>
 				<td>4.5</td>
 				<td>47.5%</td>
-				<td>&empty;</td>
+				<td></td>
 				<td>70.0%</td>
 				<td>4.7</td>
-				<td>1</td>
+				<td>1.0</td>
 				<td>0.4</td>
 				<td>1.1</td>
-				<td>1</td>
+				<td>1.0</td>
 				<td>3.4</td>
 				<td>6.1</td>
 			</tr>
@@ -90,18 +108,18 @@
 				<td>2.08</td>
 				<td>F</td>
 				<td>0</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
+				<td>00:00</td>
+				<td>0.0</td>
+				<td>0.0%</td>
+				<td>0.0%</td>
+				<td>0.0%</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
 			</tr>
 			<tr>
 				<td>10</td>
@@ -115,12 +133,12 @@
 				<td>0.3</td>
 				<td>25.0%</td>
 				<td>0.0%</td>
-				<td>&empty;</td>
+				<td></td>
 				<td>0.1</td>
 				<td>0.4</td>
 				<td>0.3</td>
-				<td>0</td>
-				<td>0</td>
+				<td>0.0</td>
+				<td>0.0</td>
 				<td>0.9</td>
 				<td>-1.3</td>
 			</tr>
@@ -150,7 +168,7 @@
 				<td>Sloukas, Kostas</td>
 				<td>Greece</td>
 				<td>27</td>
-				<td>1.9</td>
+				<td>1.90</td>
 				<td>G</td>
 				<td>9</td>
 				<td>29:18</td>
@@ -174,18 +192,18 @@
 				<td>2.03</td>
 				<td>F</td>
 				<td>0</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
+				<td>00:00</td>
+				<td>0.0</td>
+				<td>0.0%</td>
+				<td>0.0%</td>
+				<td>0.0%</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
 			</tr>
 			<tr>
 				<td>21</td>
@@ -196,17 +214,17 @@
 				<td>F</td>
 				<td>10</td>
 				<td>23:00</td>
-				<td>11</td>
+				<td>11.0</td>
 				<td>62.1%</td>
 				<td>61.8%</td>
 				<td>84.6%</td>
 				<td>2.3</td>
 				<td>1.1</td>
 				<td>0.8</td>
-				<td>1</td>
+				<td>1.0</td>
 				<td>0.1</td>
 				<td>1.7</td>
-				<td>11</td>
+				<td>11.0</td>
 			</tr>
 			<tr>
 				<td>23</td>
@@ -225,7 +243,7 @@
 				<td>1.6</td>
 				<td>0.8</td>
 				<td>1.6</td>
-				<td>0</td>
+				<td>0.0</td>
 				<td>1.7</td>
 				<td>3.8</td>
 			</tr>
@@ -240,11 +258,11 @@
 				<td>29:45</td>
 				<td>13.8</td>
 				<td>65.1%</td>
-				<td>&empty;</td>
+				<td></td>
 				<td>70.3%</td>
 				<td>4.4</td>
 				<td>1.7</td>
-				<td>1</td>
+				<td>1.0</td>
 				<td>1.5</td>
 				<td>0.9</td>
 				<td>3.3</td>
@@ -260,16 +278,16 @@
 				<td>2</td>
 				<td>04:02</td>
 				<td>1.5</td>
-				<td>&empty;</td>
+				<td></td>
 				<td>100.0%</td>
-				<td>&empty;</td>
-				<td>0</td>
-				<td>0</td>
-				<td>0</td>
+				<td></td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
 				<td>0.5</td>
-				<td>0</td>
-				<td>1</td>
-				<td>&empty;</td>
+				<td>0.0</td>
+				<td>1.0</td>
+				<td>0.0</td>
 			</tr>
 			<tr>
 				<td>33</td>
@@ -279,18 +297,18 @@
 				<td>2.02</td>
 				<td>F</td>
 				<td>0</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
-				<td>&empty;</td>
+				<td>00:00</td>
+				<td>0.0</td>
+				<td>0.0%</td>
+				<td>0.0%</td>
+				<td>0.0%</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
 			</tr>
 			<tr>
 				<td>35</td>
@@ -304,14 +322,14 @@
 				<td>2.5</td>
 				<td>33.3%</td>
 				<td>50.0%</td>
-				<td>&empty;</td>
-				<td>1</td>
+				<td></td>
+				<td>1.0</td>
 				<td>0.5</td>
-				<td>0</td>
-				<td>0</td>
-				<td>0</td>
-				<td>0</td>
-				<td>2</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>0.0</td>
+				<td>2.0</td>
 			</tr>
 			<tr>
 				<td>44</td>
@@ -324,9 +342,9 @@
 				<td>08:34</td>
 				<td>2.3</td>
 				<td>70.0%</td>
-				<td>&empty;</td>
+				<td></td>
 				<td>0.0%</td>
-				<td>1</td>
+				<td>1.0</td>
 				<td>0.7</td>
 				<td>0.3</td>
 				<td>0.2</td>
@@ -365,12 +383,12 @@
 				<td style='font-style:italic;'>10</td>
 				<td style='font-style:italic;'></td>
 				<td style='font-style:italic;'>85.3</td>
-				<td style='font-style:italic;'>52.1%</td>
-				<td style='font-style:italic;'>44.7%</td>
-				<td style='font-style:italic;'>71.1%</td>
+				<td style='font-style:italic;'>40.9%</td>
+				<td style='font-style:italic;'>33.5%</td>
+				<td style='font-style:italic;'>53.4%</td>
 				<td style='font-style:italic;'>29.7</td>
 				<td style='font-style:italic;'>21.1</td>
-				<td style='font-style:italic;'>6</td>
+				<td style='font-style:italic;'>6.0</td>
 				<td style='font-style:italic;'>12.8</td>
 				<td style='font-style:italic;'>3.9</td>
 				<td style='font-style:italic;'>21.5</td>
@@ -379,14 +397,23 @@
 
 		</table>
 		</br>
-		<ul>
-			<li>Number of players in 'Center' position is 3.</li>
-			<li>Number of players in 'Forward' position is 6.</li>
-			<li>Number of players in 'Guard' position is 6.</li>
-			<li>Number of players older 30 years old is 4.</li>
-			<li>Average age of team is 27.</li>
-			<li>
-		</ul>
+		<div>
+			<ul>
+				<li>Number of players in 'Center' position is '3'.</li>
+				<li>Number of players in 'Forward' position is '6'.</li>
+				<li>Number of players in 'Guard' position is '6'.</li>
+				<li>'3' players did not play in any of the games this season</li>
+				<li>Average age of the team is '27.5'.</li>
+				<li>Number of players older than 30 years old is '4'.</li>
+				<li>Number of players shorter than 1.80 is '1'.</li>
+				<li>Number of players taller than 2.10 is '2'.</li>
+				<li>Average score per player is '7.1 points'.</li>
+				<li>The player who scored the most points with '13.8' is 'Vesely, Jan'.</li>
+				<li>Player Index Rating per player is '7.8'.</li>
+				<li>'Vesely, Jan' is the most efficient player with '16.9' index rating.</li>
+				
+			</ul>
+		</div>
 	</body>
 </html>
 
